# font-dedup

./: .gitignore  LICENSE  README.md  TESTING.md  pyproject.toml
.kiro/specs/font-glyph-deduplication/: design.md  requirements.md  tasks.md
fonts/: README.md
src/font_dedup/: __init__.py  analyzer.py  cli.py  engine.py  generator.py  models.py  reporter.py  shape_analyzer.py  utils.py  validator.py
tests/: __init__.py  test_cjk_fonts.py  test_cli.py  test_engine_shape_aware.py  test_reporter.py  test_shape_detection_integration.py  test_utils_integration.py
